command_line_dev/feature_selection.kb_fizzy2.txt
  File "scripts/kb_fizzy2.py", line 117
    elif sel_method == "chi2":
       ^
IndentationError: expected an indented block
